# UniversalBre

./: .gitignore  Cargo.toml  README.md  universal_bre.sublime-workspace
LegacyCpp/: .gitignore  UniversalBre.sln
LegacyCpp/UniversalBre/: CMakeLists.txt  UniversalBre.vcxproj  UniversalBre.vcxproj.filters  assignment_node.cpp  assignment_node.h  binop_expression_node.cpp  binop_expression_node.h  code_generator.h  console_handler.h  console_log.cpp  console_log.h  console_waiter.h  control_flow_node.cpp  control_flow_node.h  exceptions.h  expression_node.h  function_expression_node.cpp  function_expression_node.h  global_defines.h  main.cpp  main.h  op_types.h  parser.cpp  parser.h  printable.h  program_header.h  scanner.cpp  scanner.h  semantic_types.h  ssa_instruction.h  token.h  token_types.h  utility.h
LegacyCpp/UniversalBre.xcodeproj/: project.pbxproj
LegacyCpp/UniversalBre.xcodeproj/project.xcworkspace/xcuserdata/jonfast.xcuserdatad/: UserInterfaceState.xcuserstate
LegacyCpp/UniversalBre.xcodeproj/xcuserdata/jonfast.xcuserdatad/xcschemes/: xcschememanagement.plist
RustCode/: CMakeLists.txt  Cargo.toml
RustCode/src/: atom_status.rs  binary_expr.rs  command_line.rs  commandline.rs  constants.rs  literal_expr.rs  log.rs  loop_block.rs  loop_type.rs  main.rs  operation_type.rs  operationtype.rs  ordering.rs  parser.rs  program.rs  repl.rs  scanner.rs  semantic_blocks.rs  statement.rs  statement_type.rs  token.rs  token_type.rs  tokentype.rs
UniversalBre/: CMakeLists.txt  UniversalBre.vcxproj  UniversalBre.vcxproj.filters  argument_list_node.cpp  argument_list_node.h  assignment_node.cpp  assignment_node.h  atom_status.cpp  atom_status.h  binop_expression_node.cpp  binop_expression_node.h  binop_types.h  boxed_value.h  code_generator.cpp  code_generator.h  console_handler.cpp  console_handler.h  console_log.cpp  console_log.h  console_waiter.cpp  console_waiter.h  exceptions.cpp  exceptions.h  expression_node.h  expression_pruner.cpp  expression_pruner.h  function_expression_node.cpp  function_expression_node.h  global_defines.h  instruction.h  literal_expression_node.cpp  literal_expression_node.h  log.h  main.cpp  main.h  one_operand_instruction.cpp  one_operand_instruction.h  op_types.h  parser.cpp  parser.h  (+25 more)
UniversalBre.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UniversalBre.xcodeproj/project.xcworkspace/xcuserdata/jonfast.xcuserdatad/: UserInterfaceState.xcuserstate
UniversalBre.xcodeproj/xcuserdata/jonfast.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: atom_status.rs  code_generation.rs  error.rs  main.rs  parser.rs  repl.rs  scanner.rs  semantic_analysis.rs  semantic_blocks.rs  symbol_table.rs  token.rs  utilities.rs  utility.rs  visualizer.rs
src/code_generation/: codegen.rs  mir.rs  visualizer.rs
src/parser/: parser.rs
src/scanner/: atom_status.rs  scanner.rs  token.rs
src/semantic_analysis/: data_types.rs  expressions.rs  functions.rs  loops.rs  operation_types.rs  program.rs  semantic_blocks.rs  statements.rs  symbol_table.rs
src/utilities/: command_line.rs  constants.rs  error.rs  log.rs  repl.rs  utility.rs
test_programs/: feature_test.prg  minimal_test.prg
