cmake_minimum_required(VERSION 3.10)
project(RustCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(RustCode
        .idea/misc.xml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        src/atom_status.rs
        src/command_line.rs
        src/constants.rs
        src/log.rs
        src/main.rs
        src/operation_type.rs
        src/parser.rs
        src/repl.rs
        src/scanner.rs
        src/token.rs
        src/token_type.rs
        target/debug/.fingerprint/atty-55104eeb3f04f4ab/dep-lib-atty-55104eeb3f04f4ab
        target/debug/.fingerprint/atty-55104eeb3f04f4ab/lib-atty-55104eeb3f04f4ab
        target/debug/.fingerprint/atty-55104eeb3f04f4ab/lib-atty-55104eeb3f04f4ab.json
        target/debug/.fingerprint/bitflags-26328f177ad318e4/dep-lib-bitflags-26328f177ad318e4
        target/debug/.fingerprint/bitflags-26328f177ad318e4/lib-bitflags-26328f177ad318e4
        target/debug/.fingerprint/bitflags-26328f177ad318e4/lib-bitflags-26328f177ad318e4.json
        target/debug/.fingerprint/clap-bd6fd0900c48e453/dep-lib-clap-bd6fd0900c48e453
        target/debug/.fingerprint/clap-bd6fd0900c48e453/lib-clap-bd6fd0900c48e453
        target/debug/.fingerprint/clap-bd6fd0900c48e453/lib-clap-bd6fd0900c48e453.json
        target/debug/.fingerprint/encode_unicode-0201c8a5df3408f2/dep-lib-encode_unicode-0201c8a5df3408f2
        target/debug/.fingerprint/encode_unicode-0201c8a5df3408f2/lib-encode_unicode-0201c8a5df3408f2
        target/debug/.fingerprint/encode_unicode-0201c8a5df3408f2/lib-encode_unicode-0201c8a5df3408f2.json
        target/debug/.fingerprint/kernel32-sys-21f21a1d9911250f/build-script-build_script_build-21f21a1d9911250f
        target/debug/.fingerprint/kernel32-sys-21f21a1d9911250f/build-script-build_script_build-21f21a1d9911250f.json
        target/debug/.fingerprint/kernel32-sys-21f21a1d9911250f/dep-build-script-build_script_build-21f21a1d9911250f
        target/debug/.fingerprint/kernel32-sys-25670444ac30c755/dep-lib-kernel32-25670444ac30c755
        target/debug/.fingerprint/kernel32-sys-25670444ac30c755/lib-kernel32-25670444ac30c755
        target/debug/.fingerprint/kernel32-sys-25670444ac30c755/lib-kernel32-25670444ac30c755.json
        target/debug/.fingerprint/kernel32-sys-78af8d4240668e17/build
        target/debug/.fingerprint/kernel32-sys-78af8d4240668e17/build.json
        target/debug/.fingerprint/libc-dce9ac9e5a7dae71/dep-lib-libc-dce9ac9e5a7dae71
        target/debug/.fingerprint/libc-dce9ac9e5a7dae71/lib-libc-dce9ac9e5a7dae71
        target/debug/.fingerprint/libc-dce9ac9e5a7dae71/lib-libc-dce9ac9e5a7dae71.json
        target/debug/.fingerprint/rustyline-44d634299e66cba8/dep-lib-rustyline-44d634299e66cba8
        target/debug/.fingerprint/rustyline-44d634299e66cba8/lib-rustyline-44d634299e66cba8
        target/debug/.fingerprint/rustyline-44d634299e66cba8/lib-rustyline-44d634299e66cba8.json
        target/debug/.fingerprint/strsim-f65eec109d6db413/dep-lib-strsim-f65eec109d6db413
        target/debug/.fingerprint/strsim-f65eec109d6db413/lib-strsim-f65eec109d6db413
        target/debug/.fingerprint/strsim-f65eec109d6db413/lib-strsim-f65eec109d6db413.json
        target/debug/.fingerprint/termcolor-9d53252994b186d4/dep-lib-termcolor-9d53252994b186d4
        target/debug/.fingerprint/termcolor-9d53252994b186d4/lib-termcolor-9d53252994b186d4
        target/debug/.fingerprint/termcolor-9d53252994b186d4/lib-termcolor-9d53252994b186d4.json
        target/debug/.fingerprint/textwrap-a09b36c948d70492/dep-lib-textwrap-a09b36c948d70492
        target/debug/.fingerprint/textwrap-a09b36c948d70492/lib-textwrap-a09b36c948d70492
        target/debug/.fingerprint/textwrap-a09b36c948d70492/lib-textwrap-a09b36c948d70492.json
        target/debug/.fingerprint/unicode-width-04141553a42b3e37/dep-lib-unicode_width-04141553a42b3e37
        target/debug/.fingerprint/unicode-width-04141553a42b3e37/lib-unicode_width-04141553a42b3e37
        target/debug/.fingerprint/unicode-width-04141553a42b3e37/lib-unicode_width-04141553a42b3e37.json
        target/debug/.fingerprint/universal_bre-dc799080cdafbe92/bin-universal_bre-dc799080cdafbe92
        target/debug/.fingerprint/universal_bre-dc799080cdafbe92/bin-universal_bre-dc799080cdafbe92.json
        target/debug/.fingerprint/universal_bre-dc799080cdafbe92/dep-bin-universal_bre-dc799080cdafbe92
        target/debug/.fingerprint/vec_map-ca435936dc3a3681/dep-lib-vec_map-ca435936dc3a3681
        target/debug/.fingerprint/vec_map-ca435936dc3a3681/lib-vec_map-ca435936dc3a3681
        target/debug/.fingerprint/vec_map-ca435936dc3a3681/lib-vec_map-ca435936dc3a3681.json
        target/debug/.fingerprint/winapi-03dadb8df7b1804a/dep-lib-winapi-03dadb8df7b1804a
        target/debug/.fingerprint/winapi-03dadb8df7b1804a/lib-winapi-03dadb8df7b1804a
        target/debug/.fingerprint/winapi-03dadb8df7b1804a/lib-winapi-03dadb8df7b1804a.json
        target/debug/.fingerprint/winapi-12842ea84eefc7ef/build-script-build_script_build-12842ea84eefc7ef
        target/debug/.fingerprint/winapi-12842ea84eefc7ef/build-script-build_script_build-12842ea84eefc7ef.json
        target/debug/.fingerprint/winapi-12842ea84eefc7ef/dep-build-script-build_script_build-12842ea84eefc7ef
        target/debug/.fingerprint/winapi-800a09b93a975102/build
        target/debug/.fingerprint/winapi-800a09b93a975102/build.json
        target/debug/.fingerprint/winapi-build-05e61911f165015b/dep-lib-build-05e61911f165015b
        target/debug/.fingerprint/winapi-build-05e61911f165015b/lib-build-05e61911f165015b
        target/debug/.fingerprint/winapi-build-05e61911f165015b/lib-build-05e61911f165015b.json
        target/debug/.fingerprint/winapi-c9ac4ef557a5fbd9/dep-lib-winapi-c9ac4ef557a5fbd9
        target/debug/.fingerprint/winapi-c9ac4ef557a5fbd9/lib-winapi-c9ac4ef557a5fbd9
        target/debug/.fingerprint/winapi-c9ac4ef557a5fbd9/lib-winapi-c9ac4ef557a5fbd9.json
        target/debug/.fingerprint/wincolor-f9e676aad319c295/dep-lib-wincolor-f9e676aad319c295
        target/debug/.fingerprint/wincolor-f9e676aad319c295/lib-wincolor-f9e676aad319c295
        target/debug/.fingerprint/wincolor-f9e676aad319c295/lib-wincolor-f9e676aad319c295.json
        target/debug/build/kernel32-sys-21f21a1d9911250f/build-script-build.exe
        target/debug/build/kernel32-sys-21f21a1d9911250f/build_script_build-21f21a1d9911250f.d
        target/debug/build/kernel32-sys-21f21a1d9911250f/build_script_build-21f21a1d9911250f.exe
        target/debug/build/kernel32-sys-21f21a1d9911250f/build_script_build-21f21a1d9911250f.pdb
        target/debug/build/kernel32-sys-78af8d4240668e17/output
        target/debug/build/kernel32-sys-78af8d4240668e17/root-output
        target/debug/build/kernel32-sys-78af8d4240668e17/stderr
        target/debug/build/winapi-12842ea84eefc7ef/build-script-build.exe
        target/debug/build/winapi-12842ea84eefc7ef/build_script_build-12842ea84eefc7ef.d
        target/debug/build/winapi-12842ea84eefc7ef/build_script_build-12842ea84eefc7ef.exe
        target/debug/build/winapi-12842ea84eefc7ef/build_script_build-12842ea84eefc7ef.pdb
        target/debug/build/winapi-800a09b93a975102/output
        target/debug/build/winapi-800a09b93a975102/root-output
        target/debug/build/winapi-800a09b93a975102/stderr
        target/debug/deps/atty-55104eeb3f04f4ab.d
        target/debug/deps/bitflags-26328f177ad318e4.d
        target/debug/deps/build-05e61911f165015b.d
        target/debug/deps/clap-bd6fd0900c48e453.d
        target/debug/deps/encode_unicode-0201c8a5df3408f2.d
        target/debug/deps/kernel32-25670444ac30c755.d
        target/debug/deps/libatty-55104eeb3f04f4ab.rlib
        target/debug/deps/libbitflags-26328f177ad318e4.rlib
        target/debug/deps/libbuild-05e61911f165015b.rlib
        target/debug/deps/libc-dce9ac9e5a7dae71.d
        target/debug/deps/libclap-bd6fd0900c48e453.rlib
        target/debug/deps/libencode_unicode-0201c8a5df3408f2.rlib
        target/debug/deps/libkernel32-25670444ac30c755.rlib
        target/debug/deps/liblibc-dce9ac9e5a7dae71.rlib
        target/debug/deps/librustyline-44d634299e66cba8.rlib
        target/debug/deps/libstrsim-f65eec109d6db413.rlib
        target/debug/deps/libtermcolor-9d53252994b186d4.rlib
        target/debug/deps/libtextwrap-a09b36c948d70492.rlib
        target/debug/deps/libunicode_width-04141553a42b3e37.rlib
        target/debug/deps/libvec_map-ca435936dc3a3681.rlib
        target/debug/deps/libwinapi-03dadb8df7b1804a.rlib
        target/debug/deps/libwinapi-c9ac4ef557a5fbd9.rlib
        target/debug/deps/libwincolor-f9e676aad319c295.rlib
        target/debug/deps/rustyline-44d634299e66cba8.d
        target/debug/deps/strsim-f65eec109d6db413.d
        target/debug/deps/termcolor-9d53252994b186d4.d
        target/debug/deps/textwrap-a09b36c948d70492.d
        target/debug/deps/unicode_width-04141553a42b3e37.d
        target/debug/deps/universal_bre-dc799080cdafbe92.d
        target/debug/deps/universal_bre-dc799080cdafbe92.exe
        target/debug/deps/universal_bre-dc799080cdafbe92.pdb
        target/debug/deps/vec_map-ca435936dc3a3681.d
        target/debug/deps/winapi-03dadb8df7b1804a.d
        target/debug/deps/winapi-c9ac4ef557a5fbd9.d
        target/debug/deps/wincolor-f9e676aad319c295.d
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/11q0nl46ldqcaukf.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/16u6js6g0l3k1ic6.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/17psp0kxv32197yo.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1czhjspy8t7drjhy.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1e7x6bh60ymc36tc.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1im38lueib99jsk0.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1mvmz58owquyropc.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1o6b1la7g4jnv39b.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1pyg38ew8eq184bu.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1vut2eft6nlujjxr.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1y16o1qfye96o7m0.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1zeawhkbeobww1zn.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/1zwd8n7bcl3vhvvh.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/200sjsykd511hpmp.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/236iz806sghm3wx.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/23tqyymcb18u96mb.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/28m6b5dkfoixx5aa.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2f0hry2t7c05ttdi.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2gqlnbn1gtu47xw2.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2jqywn86b2gsqohu.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2kjrmm4fe2aha78f.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2lyh15q6cjwzy18c.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2p4amc0qu69y3eho.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2qhkzqx5zqexj20y.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2qvcfmplg6kccc08.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2t32z4egqf8c1cxt.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2uba1xvp3aakqmtj.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2uly7i8jy3oqnru3.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2un0wp0kyk83x1xq.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/2zc7gb0a2b4r93s9.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3171x0bwu82dptu7.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/38ps4pa181wsnsy9.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3ayaeypdcro9d6yk.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3cx7oljifvb206q7.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3do2u7erct6u2z3t.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3fdwfzv4qg6g0l8n.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3g94tobrpgum5dk6.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3ik0x0hz6l66cx38.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3kfx4ynvkmi2y9i5.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3ldk0i2zxftngav8.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/3rngp6bm2u2q5z0y.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/436dotimmrgzkwfa.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/43v6g0y2xsxoggnt.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/45nf4z58qqykpcpi.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/45pc7c65foh9i35f.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/46i5lozenzfoplot.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/48721dc4k5qxei0u.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/49a7n47po4ttqjl7.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/49lx1q7cxvpykyv0.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/49qmpuk8w1opmi5q.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4ezmh1vbs95c5ack.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4jdnq7xfjeka1bt.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4rknevt5yo7mh62p.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4vp4wqj2v29i7mgy.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4xq48u46a1pwiqn7.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4ybye971cqflgun6.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4yh8x2b62dcih00t.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/4ypvbwho0bu5tnww.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/51s1w397y42gpez1.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/54zq6xwdlu4umqga.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/5544xgl7axh7p8nz.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/555x2l3tz3it37mb.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/56dly8q07ws8ucdq.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/56uq8jzdp38x0q07.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/572bgozz9kcwe4zq.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/57k06xfugllsc526.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/5frs3mx5dzjbj7u6.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/63mmpc50mjcb0lb.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/8xzrsc1ux72v29j.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/98g0d9x8aw3akpe.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/9elsx31vb4it187.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/c6lbtaiefvx3wya.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/dep-graph.bin
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/e19kx9t7xhzajfl.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/kt25z0521ngsjub.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/lcmmtdpw7frkp9b.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/pqmjx25qpxkduz7.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/query-cache.bin
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/vpbpnff9uk7ha66.o
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33-2nog6ez5bts4/work-products.bin
        target/debug/incremental/universal_bre-3d7qa5e6r0v5o/s-ezumpu8yr5-1poff33.lock
        target/debug/.cargo-lock
        target/debug/universal_bre.d
        target/debug/universal_bre.exe
        .gitignore
        Cargo.lock
        Cargo.toml
        universal_bre.iml)
